<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="26sp"
	        android:text="@string/tv_start"/>
    <EditText
	        android:id="@+id/etStart"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"/>
       <Button 
           android:id="@+id/btnMyCord"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/btn_my_cord"/>
       <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="26sp"
	        android:text="@string/tv_destination"/>
       <EditText
	        android:id="@+id/etDestination"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"/>
       <RadioGroup 
	        android:id="@+id/rgUserRole"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
           <RadioButton 
               android:id="@+id/rbUserPassenger"
               android:layout_width="wrap_content"
        	   android:layout_height="wrap_content"
        	   android:checked="true"
        	   android:text="@string/rb_user_passenger"/>
           <RadioButton 
               android:id="@+id/rbUserDriver"
               android:layout_width="wrap_content"
        	   android:layout_height="wrap_content"
        	   android:text="@string/rb_user_driver"/>
       </RadioGroup>
       <LinearLayout 
           	android:layout_width="match_parent"
   			android:layout_height="match_parent"
    		android:orientation="horizontal">
           <Button 
	           android:id="@+id/btnOk"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/ok"/>
           <Button 
	           android:id="@+id/btnAbort"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:layout_weight="1"
	           android:text="@string/abort"/>
       </LinearLayout> 
</LinearLayout>
